# django-blog

./: Dockerfile  Jenkinsfile  databricks.yaml  databricks.yml  test.py
.github/: PULL_REQUEST_TEMPLATE.mdPULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/workflows/: PULL_REQUEST_TEMPLATE.md  condtitional.yaml  dab_test.yaml  deploy_catalyst.yml  lokesh_pr.yaml  loki.yaml  unit.yaml
blog/static/css/: blog.css
projects/dmi_rwde/: pyproject.toml
projects/dmi_rwde/unittest/: packages.yml  ut_commands.txt
resources/: ua_resources.yml
